# src_platform_clip-viewer

./: CHANGELOG  Makefile.in  README.md  configure  configure.in
src/: Makefile.in  clipviewer.cpp  clipviewer.h  icons.qrc  main.cpp
